--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="libs/panelset/panelset.js"></script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"f8857322da6747f58d9e2cf3c21017a3","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x84e11b0c1284738a8168d4448a3dca9","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
 class: center, middle, inverse, title-slide
 
 # Apresentação da disciplina
-## Logística - EPC
+## Logística - ADM
 ### Renata Oliveira
 ### 18/10/2021
 
@@ -123,9 +123,9 @@ Por meio desta disciplina, os alunos desenvolverão competências para:
 
 ## Planejamento de encontros síncronos
 
-Os encontros síncronos acontecerão nas **segundas-feiras**, de **19:00 às 20:30h**. Acontecerão na plataforma `Teams`. 
+Os encontros síncronos acontecerão nas **segundas-feiras**, de **20:40h às 22:10**. Acontecerão na plataforma `Teams`. 
 
-Vocês poderão acessar o canal da disciplina pelo [link](https://teams.microsoft.com/l/team/19%3a7C-HRfZ6jj8HwXf4p4T43lXROeBF2iERlTjicYOtU0E1%40thread.tacv2/conversations?groupId=5da93f1b-ae42-4d98-b553-d0b5d8b130ee&amp;tenantId=ef9d67f2-bd3f-4e0c-84ba-3ffc81ab1c83).
+Vocês poderão acessar o canal da disciplina pelo [link](https://teams.microsoft.com/l/team/19%3aiWJRMuk-g676YbdL85v7jm_Up-mNfI8vxF3ymvO2uRE1%40thread.tacv2/conversations?groupId=13230d26-a870-45e8-86c8-ad9f6b0fd90b&amp;tenantId=ef9d67f2-bd3f-4e0c-84ba-3ffc81ab1c83).
 
 ---
 
@@ -206,7 +206,7 @@ Turma Virtual do SIGAA para postagens de conteúdos e outras comunicações.
 
 ## Comunicação
 
-Toda comunicação individual com a docente deverá acontecer por meio do email institucional do docente, deve conter no campo "assunto" o texto `&lt;Log-epc&gt;` e deve ser assinada com seu nome completo. Por favor, utilize o email institucional para comunicação com o docente: renataoliveira@cefetmg.br
+Toda comunicação individual com a docente deverá acontecer por meio do email institucional do docente, deve conter no campo "assunto" o texto `&lt;Log-adm&gt;` e deve ser assinada com seu nome completo. Por favor, utilize o email institucional para comunicação com o docente: renataoliveira@cefetmg.br
 
 Se o seu email não contempla alguma questão pessoal/individual, mas sim questionamentos e dúvidas sobre as atividades deste curso, por favor:
 
@@ -254,6 +254,8 @@ Os estudantes que forem considerados em violação da política de integridade a
 1. **Composição dos grupos de trabalho:** Cada grupo será composto por **três a quatro alunos**. Esse grupo deve se manter para realização de todos os projetos. 
 
 2. **Planejamento da execução dos trabalhos:** Definir um cronograma a priori, contemplando entregas parciais alinhadas com os projetos e acompanhar as etapas de execução. 
+
+3. As atividades devem, necessariamente, acontecer de **forma colaborativa**. Para tanto, será criada uma wiki para cada grupo/atividade no Moodle/AVA institucional. Assim, será possível acompanhar a contribuição de cada estudante no desenvolvimento dos trabalhos. 
 
 ---
 
