--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="libs/panelset/panelset.js"></script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x84e11b0c1284738a8168d4448a3dca9","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xada8b1020fd4d55bd08e85169a238d0","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -194,13 +194,13 @@ TOTAL:| |	100 pontos
 
 Computador com Sistema Operacional à escolha do estudante, conexão à internet, câmera e microfone.
 
-Os softwares a serem instalados são: 
-
 Será necessário o uso de planilha eletrônica (o aplicativo pode ser de escolha do aluno) e ao longo da disciplina serão indicados aplicativos FOSS para outras análises.
 
 Os alunos serão cadastrados na plataforma `Teams`.
 
 Turma Virtual do SIGAA para postagens de conteúdos e outras comunicações.
+
+Acesso ao Moodle/AVA institucional.
 
 ---
 
@@ -255,7 +255,7 @@ Os estudantes que forem considerados em violação da política de integridade a
 
 2. **Planejamento da execução dos trabalhos:** Definir um cronograma a priori, contemplando entregas parciais alinhadas com os projetos e acompanhar as etapas de execução. 
 
-3. As atividades devem, necessariamente, acontecer de **forma colaborativa**. Para tanto, será criada uma wiki para cada grupo/atividade no Moodle/AVA institucional. Assim, será possível acompanhar a contribuição de cada estudante no desenvolvimento dos trabalhos. 
+3. As atividades devem, necessariamente, acontecer de **forma colaborativa**. Para tanto, será criada uma **wiki** para cada grupo/atividade no **Moodle/AVA** institucional. Assim, será possível acompanhar a contribuição de cada estudante no desenvolvimento de cada trabalho. 
 
 ---
 
