--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="libs/panelset/panelset.js"></script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xada8b1020fd4d55bd08e85169a238d0","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe2f1162440143c0be17220fccc74aaa","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -68,6 +68,12 @@ layout: true
 
 
 
+class: middle, center, inverse
+
+[Logística é parte da minha vida?](https://valorinveste.globo.com/mercados/brasil-e-politica/noticia/2021/10/17/caminhoneiros-prometem-greve-a-partir-de-1o-de-novembro-se-governo-nao-atender-pedidos.ghtml)
+
+
+---
 
 class: middle, center, inverse
 
